fix bugs, put all together in a train function, test it with a 3-class spiral data (test acuracy 97% percent)

--- a/notebooks/neural-network-from-scratch.ipynb
+++ b/notebooks/neural-network-from-scratch.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "970a1e45",
    "metadata": {},
    "outputs": [],
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "e89cde36",
    "metadata": {},
    "outputs": [],
@@ -130,14 +130,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Define concrete implementation of Layer: Linear, ReLU, and Sequential\n",
+    "# Define concrete implementation of Layer: Linear, ReLU, SoftMax, and Sequential\n",
     "\n",
     "class ReLU(Layer):\n",
     "    def __init__(self):\n",
     "        super().__init__()\n",
     "        \n",
     "    def forward(self, x: np.ndarray) -> np.ndarray:\n",
-    "        assert x.shape[1] == self.input_dim, f\"Input shape {x.shape} does not match expected shape (batch_size, {self.input_dim})\"\n",
     "        self.input = x\n",
     "        return np.maximum(0, x)\n",
     "\n",
@@ -154,11 +153,12 @@
     "        # Initialize weights and bias\n",
     "        self.weights = np.random.randn(input_dim, output_dim) * 0.01\n",
     "        self.bias = np.zeros((1, output_dim))\n",
+    "        self.grad_weights = None\n",
+    "        self.grad_bias = None   \n",
     "\n",
     "    def forward(self, x: np.ndarray) -> np.ndarray:\n",
     "        assert x.shape[1] == self.weights.shape[0], f\"Input shape {x.shape} does not match expected shape (batch_size, {self.weights.shape[0]})\"\n",
     "        assert self.weights.shape[1] == self.bias.shape[1], f\"Weights shape {self.weights.shape} does not match bias shape {self.bias.shape}\"\n",
-    "        assert x.shape[0] == self.bias.shape[0], f\"Input shape {x.shape} does not match bias shape {self.bias.shape}\"\n",
     "        self.input = x\n",
     "        return x @ self.weights + self.bias\n",
     "\n",
@@ -168,23 +168,39 @@
     "        # Gradient of the loss with respect to the input\n",
     "        grad_input = grad @ self.weights.T\n",
     "        # Gradient of the loss with respect to the weights and bias\n",
-    "        grad_weights = self.input.T @ grad\n",
-    "        grad_bias = np.sum(grad, axis=0, keepdims=True)\n",
-    "        # Update weights and bias here if needed\n",
+    "        self.grad_weights = self.input.T @ grad\n",
+    "        self.grad_bias = np.sum(grad, axis=0, keepdims=True)\n",
     "        return grad_input\n",
+    "    \n",
+    "class SoftMax(Layer):\n",
+    "    def __init__(self):\n",
+    "        super().__init__()\n",
+    "        self.output = None\n",
+    "        \n",
+    "    def forward(self, x: np.ndarray) -> np.ndarray:\n",
+    "        # Subtract max for numerical stability\n",
+    "        exp_x = np.exp(x - np.max(x, axis=1, keepdims=True))\n",
+    "        self.output = exp_x / np.sum(exp_x, axis=1, keepdims=True)\n",
+    "        return self.output\n",
+    "\n",
+    "    def backward(self, grad: np.ndarray) -> np.ndarray:\n",
+    "        assert grad.shape == self.output.shape, f\"Gradient shape {grad.shape} does not match output shape {self.output.shape}\"\n",
+    "        # Gradient of the loss with respect to the input\n",
+    "        return grad * self.output * (1 - self.output)\n",
     "    \n",
     "class Sequential(Layer):\n",
     "    def __init__(self, layers: list):\n",
     "        self.layers = layers\n",
-    "        super().__init__(layers[0].input_dim, layers[-1].output_dim)\n",
+    "        super().__init__(layers[0].input_dim, layers[-2].output_dim)\n",
     "        self.__check_consistency__()\n",
     "\n",
     "    def __check_consistency__(self):\n",
-    "        assert len(self.layers) > 0, \"Sequential model must have at least one layer.\"\n",
+    "        assert len(self.layers) > 1, \"Sequential model must have at least one layer.\"\n",
     "        assert self.layers[0].input_dim is not None, \"First layer input dimension must be specified.\"\n",
-    "        assert self.layers[-1].output_dim is not None, \"Last layer output dimension must be specified.\"\n",
+    "        # here we assume the last layer is a  softmax layer, so we check the second last layer\n",
+    "        assert self.layers[-2].output_dim is not None, \"Last layer output dimension must be specified.\"\n",
     "        assert self.layers[0].input_dim == self.input_dim, f\"First layer input dimension {self.layers[0].input_dim} does not match expected input dimension {self.input_dim}\"\n",
-    "        assert self.layers[-1].output_dim == self.output_dim, f\"Last layer output dimension {self.layers[-1].output_dim} does not match expected output dimension {self.output_dim}\"\n",
+    "        assert self.layers[-2].output_dim == self.output_dim, f\"Last layer output dimension {self.layers[-1].output_dim} does not match expected output dimension {self.output_dim}\"\n",
     "        current_dim = self.input_dim\n",
     "        mismatch_list = []\n",
     "        for layer in self.layers:\n",
@@ -192,8 +208,8 @@
     "                if layer.input_dim != current_dim: \n",
     "                    mismatch_list.append(f\"Layer {layer.__class__.__name__} input dimension {layer.input_dim} does not match expected input dimension {current_dim}\")\n",
     "                current_dim = layer.output_dim\n",
-    "        if current_dim != self.layers[-1].input_dim: \n",
-    "            mismatch_list.append(f\"Last layer input dimension {self.layers[-1].input_dim} does not match expected input dimension {current_dim}\")\n",
+    "       # if current_dim != self.layers[-2].output_dim: \n",
+    "       #     mismatch_list.append(f\"Last layer output dimension {self.layers[-2].output_dim} does not match expected output dimension {current_dim}\")\n",
     "        assert len(mismatch_list) == 0, f\"Layer dimension mismatch: {'\\n'.join(mismatch_list)}\"\n",
     "            \n",
     "             \n",
@@ -267,7 +283,36 @@
    "id": "ed26f1aa",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Put everything together in a training loop\n",
+    "def train(model: Sequential, loss_fn: Loss, optimizer: Optimizer, x_train: np.ndarray, y_train: np.ndarray, batch_size: int = 32, epochs: int = 1000):\n",
+    "    for epoch in range(epochs):\n",
+    "        # go in batches\n",
+    "        for i in range(0, x_train.shape[0], batch_size):\n",
+    "            x_batch = x_train[i:i + batch_size]\n",
+    "            y_batch = y_train[i:i + batch_size]\n",
+    "            \n",
+    "            # Forward pass\n",
+    "            y_pred = model.forward(x_batch)\n",
+    "            \n",
+    "            # Compute loss\n",
+    "            loss = loss_fn.forward(y_batch, y_pred)\n",
+    "            \n",
+    "            # Backward pass\n",
+    "            grad = loss_fn.backward(y_batch, y_pred)\n",
+    "            model.backward(grad)\n",
+    "            \n",
+    "            # Update parameters\n",
+    "            for layer in model.layers:\n",
+    "                if isinstance(layer, Linear):\n",
+    "                    optimizer.step(layer.weights, layer.grad_weights)\n",
+    "                    optimizer.step(layer.bias, layer.grad_bias)\n",
+    "\n",
+    "        # Print loss every 100 epochs\n",
+    "        if epoch % 100 == 0:\n",
+    "            print(f\"Epoch {epoch}, Loss: {loss}\")\n",
+    "            \n"
+   ]
   },
   {
    "cell_type": "code",
@@ -275,7 +320,46 @@
    "id": "ba90a693",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#Define a simple model and apply it to spiral dataset\n",
+    "def generate_spiral_data(n_points_per_class: int, n_classes: int):\n",
+    "    x = []\n",
+    "    y = []\n",
+    "    for j in range(n_classes):\n",
+    "        ix = range(n_points_per_class * j, n_points_per_class * (j + 1))\n",
+    "        r = np.linspace(0.0, 1, n_points_per_class)\n",
+    "        t = np.linspace(j * 4, (j + 1) * 4, n_points_per_class) + np.random.randn(n_points_per_class) * 0.2\n",
+    "        x1 = r * np.sin(t)\n",
+    "        x2 = r * np.cos(t)\n",
+    "        x.append(np.c_[x1, x2])\n",
+    "        y.append(np.full(n_points_per_class, j))\n",
+    "    x = np.vstack(x)\n",
+    "    y = np.hstack(y)\n",
+    "    y_one_hot = np.eye(n_classes)[y]\n",
+    "    return x, y_one_hot\n",
+    "\n",
+    "\n",
+    "x_train, y_train = generate_spiral_data(1000, 3)\n",
+    "x_test, y_test = generate_spiral_data(200, 3)\n",
+    "\n",
+    "model = Sequential([\n",
+    "    Linear(2, 64),\n",
+    "    ReLU(),\n",
+    "    Linear(64, 3),\n",
+    "    SoftMax()\n",
+    "])\n",
+    "loss_fn = CrossEntropy()\n",
+    "optimizer = SGD(learning_rate=0.01)\n",
+    "batch_size = 32\n",
+    "# Train the model\n",
+    "train(model, loss_fn, optimizer, x_train, y_train, epochs=1000)\n",
+    "# Test the model\n",
+    "y_pred = model.forward(x_test)\n",
+    "predicted_labels = np.argmax(y_pred, axis=1)\n",
+    "true_labels = np.argmax(y_test, axis=1)\n",
+    "accuracy = np.mean(predicted_labels == true_labels)\n",
+    "print(f\"Test Accuracy: {accuracy * 100:.2f}%\")"
+   ]
   }
  ],
  "metadata": {
