move generate spiral function to front

--- a/notebooks/neural-network-from-scratch.ipynb
+++ b/notebooks/neural-network-from-scratch.ipynb
@@ -47,6 +47,22 @@
     "    # Subtract max for numerical stability\n",
     "    exp_x = np.exp(x - np.max(x, axis=1, keepdims=True))\n",
     "    return exp_x / np.sum(exp_x, axis=1, keepdims=True)\n",
+    "\n",
+    "def generate_spiral_data(n_points_per_class: int, n_classes: int):\n",
+    "    x = []\n",
+    "    y = []\n",
+    "    for j in range(n_classes):\n",
+    "        ix = range(n_points_per_class * j, n_points_per_class * (j + 1))\n",
+    "        r = np.linspace(0.0, 1, n_points_per_class)\n",
+    "        t = np.linspace(j * 4, (j + 1) * 4, n_points_per_class) + np.random.randn(n_points_per_class) * 0.2\n",
+    "        x1 = r * np.sin(t)\n",
+    "        x2 = r * np.cos(t)\n",
+    "        x.append(np.c_[x1, x2])\n",
+    "        y.append(np.full(n_points_per_class, j))\n",
+    "    x = np.vstack(x)\n",
+    "    y = np.hstack(y)\n",
+    "    y_one_hot = np.eye(n_classes)[y]\n",
+    "    return x, y_one_hot\n",
     "\n"
    ]
   },
@@ -146,7 +162,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Define concrete implementation of Layer: Linear, ReLU, SoftMax, and Sequential\n",
+    "# Define concrete implementation of Layer: Linear, ReLU, and Sequential\n",
     "\n",
     "class ReLU(Layer):\n",
     "    def __init__(self):\n",
@@ -197,7 +213,6 @@
     "    def __check_consistency__(self):\n",
     "        assert len(self.layers) > 1, \"Sequential model must have at least one layer.\"\n",
     "        assert self.layers[0].input_dim is not None, \"First layer input dimension must be specified.\"\n",
-    "        # here we assume the last layer is a  softmax layer, so we check the second last layer\n",
     "        assert self.layers[-1].output_dim is not None, \"Last layer output dimension must be specified.\"\n",
     "        assert self.layers[0].input_dim == self.input_dim, f\"First layer input dimension {self.layers[0].input_dim} does not match expected input dimension {self.input_dim}\"\n",
     "        assert self.layers[-1].output_dim == self.output_dim, f\"Last layer output dimension {self.layers[-1].output_dim} does not match expected output dimension {self.output_dim}\"\n",
@@ -329,22 +344,6 @@
    "outputs": [],
    "source": [
     "#Define a simple model and apply it to spiral dataset\n",
-    "def generate_spiral_data(n_points_per_class: int, n_classes: int):\n",
-    "    x = []\n",
-    "    y = []\n",
-    "    for j in range(n_classes):\n",
-    "        ix = range(n_points_per_class * j, n_points_per_class * (j + 1))\n",
-    "        r = np.linspace(0.0, 1, n_points_per_class)\n",
-    "        t = np.linspace(j * 4, (j + 1) * 4, n_points_per_class) + np.random.randn(n_points_per_class) * 0.2\n",
-    "        x1 = r * np.sin(t)\n",
-    "        x2 = r * np.cos(t)\n",
-    "        x.append(np.c_[x1, x2])\n",
-    "        y.append(np.full(n_points_per_class, j))\n",
-    "    x = np.vstack(x)\n",
-    "    y = np.hstack(y)\n",
-    "    y_one_hot = np.eye(n_classes)[y]\n",
-    "    return x, y_one_hot\n",
-    "\n",
     "\n",
     "x_train, y_train = generate_spiral_data(100, 3)\n",
     "x_test, y_test = generate_spiral_data(20, 3)\n",
