--- a/notebooks/neural-network-from-scratch.ipynb
+++ b/notebooks/neural-network-from-scratch.ipynb
@@ -44,11 +44,28 @@
     "# utility functions\n",
     "\n",
     "def softmax(x: np.ndarray) -> np.ndarray:\n",
+    "    '''\n",
+    "    Compute softmax values for each sets of scores in x.\n",
+    "    x: 2D array of shape (n_samples, n_classes)\n",
+    "    return: 2D array of shape (n_samples, n_classes) with softmax probabilities\n",
+    "    \n",
+    "    The softmax function is defined as:\n",
+    "    softmax(x_i) = exp(x_i) / sum(exp(x_j))\n",
+    "    where x_i is the i-th element of the input vector x and the sum is over all elements in x.\n",
+    "    '''\n",
     "    # Subtract max for numerical stability\n",
     "    exp_x = np.exp(x - np.max(x, axis=1, keepdims=True))\n",
     "    return exp_x / np.sum(exp_x, axis=1, keepdims=True)\n",
     "\n",
     "def generate_spiral_data(n_points_per_class: int, n_classes: int):\n",
+    "    '''\n",
+    "    Generate spiral data for classification.\n",
+    "    n_points_per_class: number of points per class\n",
+    "    n_classes: number of classes\n",
+    "    return: tuple (X, y_one_hot)\n",
+    "    X: 2D array of shape (n_samples, 2) with the data points\n",
+    "    y_one_hot: 2D array of shape (n_samples, n_classes) with one-hot encoded labels\n",
+    "    '''\n",
     "    x = []\n",
     "    y = []\n",
     "    for j in range(n_classes):\n",
@@ -76,6 +93,11 @@
     "#Define abstract classes for Layer, Loss, Optimizer\n",
     "\n",
     "class Layer(ABC):\n",
+    "    '''\n",
+    "    Abstract base class for all layers in the neural network.\n",
+    "    Each layer should implement the forward and backward methods, \n",
+    "    the instances store theoir input and output dimensions.\n",
+    "    '''\n",
     "    \n",
     "    def __init__(self, input_dim=None, output_dim=None):\n",
     "        self._input_dim = input_dim\n",
@@ -116,25 +138,32 @@
     "        pass\n",
     "\n",
     "class Loss(ABC):\n",
+    "    '''\n",
+    "    Abstract base class for all loss functions.\n",
+    "    Each loss function should implement the forward and backward methods.\n",
+    "    '''\n",
+    "    \n",
     "    @abstractmethod\n",
-    "    def forward(self, y_true: np.ndarray, y_pred: np.ndarray) -> float:\n",
+    "    def forward(self, y_true: np.ndarray, y_pred: np.ndarray) -> tuple:\n",
     "        \"\"\"\n",
     "        Forward pass through the loss function.\n",
     "        Args:\n",
     "            y_true (np.ndarray): True labels. The shape should be (batch_size,).\n",
     "            y_pred (np.ndarray): Predicted labels. The shape should be (batch_size,).\n",
     "        Returns:\n",
-    "            float: Computed loss. The shape should be a scalar.\n",
+    "            tuple: A tuple containing the loss value and the predicted probabilities.\n",
+    "            The first element is a scalar (loss value), and the second element is an array of shape (batch_size,).\n",
     "        \"\"\"\n",
     "        pass\n",
     "\n",
     "    @abstractmethod\n",
-    "    def backward(self, y_true: np.ndarray, y_pred: np.ndarray) -> np.ndarray:\n",
+    "    def backward(self, y_true: np.ndarray, y_pred: np.ndarray, probs: np.ndarray) -> np.ndarray:\n",
     "        \"\"\"\n",
     "        Backward pass through the loss function.\n",
     "        Args:\n",
     "            y_true (np.ndarray): True labels. The shape should be (batch_size,).\n",
     "            y_pred (np.ndarray): Predicted labels. The shape should be (batch_size,).\n",
+    "            probs (np.ndarray): Predicted probabilities. The shape should be (batch_size,).\n",
     "        Returns:\n",
     "            np.ndarray: Gradient of the loss with respect to the predictions. The shape should be (batch_size,).\n",
     "        \"\"\"\n",
@@ -165,6 +194,11 @@
     "# Define concrete implementation of Layer: Linear, ReLU, and Sequential\n",
     "\n",
     "class ReLU(Layer):\n",
+    "    '''\n",
+    "    ReLU layer.\n",
+    "    Applies the ReLU activation function element-wise to the input.\n",
+    "    The ReLU function is defined as f(x) = max(0, x).\n",
+    "    '''\n",
     "    def __init__(self):\n",
     "        super().__init__()\n",
     "        \n",
@@ -179,6 +213,11 @@
     "    \n",
     "    \n",
     "class Linear(Layer):\n",
+    "    '''\n",
+    "    Linear layer.\n",
+    "    Applies a linear transformation to the input data.\n",
+    "    The transformation is defined as y = xW + b, where W is the weight matrix and b is the bias vector.\n",
+    "    '''\n",
     "    def __init__(self, input_dim: int, output_dim: int):\n",
     "        assert input_dim > 0 and output_dim > 0, \"Input and output dimensions of a Linear layer must be positive integers.\"\n",
     "        super().__init__(input_dim, output_dim)\n",
@@ -205,6 +244,11 @@
     "        return grad_input \n",
     "    \n",
     "class Sequential(Layer):\n",
+    "    '''\n",
+    "    Sequential model.\n",
+    "    A container for stacking layers in a linear fashion.\n",
+    "    The input to the first layer is the input to the model, and the output of the last layer is the output of the model.\n",
+    "    '''\n",
     "    def __init__(self, layers: list):\n",
     "        self.layers = layers\n",
     "        super().__init__(layers[0].input_dim, layers[-1].output_dim)\n",
@@ -223,11 +267,8 @@
     "                if layer.input_dim != current_dim: \n",
     "                    mismatch_list.append(f\"Layer {layer.__class__.__name__} input dimension {layer.input_dim} does not match expected input dimension {current_dim}\")\n",
     "                current_dim = layer.output_dim\n",
-    "       # if current_dim != self.layers[-2].output_dim: \n",
-    "       #     mismatch_list.append(f\"Last layer output dimension {self.layers[-2].output_dim} does not match expected output dimension {current_dim}\")\n",
     "        assert len(mismatch_list) == 0, f\"Layer dimension mismatch: {'\\n'.join(mismatch_list)}\"\n",
-    "            \n",
-    "             \n",
+    "                        \n",
     "    def forward(self, x: np.ndarray) -> np.ndarray:\n",
     "        assert x.shape[1] == self.layers[0].input_dim, f\"Input shape {x.shape} does not match expected shape (batch_size, {self.layers[0].input_dim})\"\n",
     "        for layer in self.layers:\n",
@@ -250,6 +291,13 @@
     "# Define concrete implementation of Loss: MeanSquaredError and CrossEntropy\n",
     "\n",
     "class MeanSquaredError(Loss):\n",
+    "    '''\n",
+    "    Mean Squared Error (MSE) loss function.\n",
+    "    It measures the average squared difference between the predicted and true values.\n",
+    "    The MSE is defined as:\n",
+    "    MSE = (1/n) * sum((y_true - y_pred)^2)\n",
+    "    where n is the number of samples, y_true is the true labels, and y_pred is the predicted labels.\n",
+    "    '''\n",
     "    def forward(self, y_true: np.ndarray, y_pred: np.ndarray) -> tuple:\n",
     "        assert y_true.shape == y_pred.shape, f\"True labels shape {y_true.shape} does not match predicted labels shape {y_pred.shape}\"\n",
     "        return np.mean(np.square(y_true - y_pred)), y_pred\n",
@@ -260,19 +308,41 @@
     "    \n",
     "    \n",
     "class CrossEntropySoftMax(Loss):\n",
-    "    # This loss function is used for multi-class classification problems.\n",
-    "    # It combines softmax activation and cross-entropy loss in one function.\n",
+    "    '''\n",
+    "    Cross-entropy loss function with softmax activation.\n",
+    "    It is used for multi-class classification problems.\n",
+    "    The cross-entropy loss is defined as:\n",
+    "    CE = -sum(y_true * log(probs))\n",
+    "    where y_true is the true labels (one-hot encoded) and probs is the predicted probabilities.\n",
+    "    '''\n",
     "    \n",
     "    def forward(self, y_true: np.ndarray, y_pred_logits: np.ndarray) -> tuple:\n",
-    "        assert y_true.shape == y_pred_logits.shape, f\"True labels shape {y_true.shape} does not match predicted labels shape {y_pred_logits.shape}\"\n",
+    "        '''\n",
+    "        Forward pass through the cross-entropy loss function.\n",
+    "        Args:\n",
+    "            y_true (np.ndarray): True labels (one-hot encoded). The shape should be (batch_size, n_classes).\n",
+    "            y_pred_logits (np.ndarray): Predicted logits. The shape should be (batch_size, n_classes).\n",
+    "        Returns:\n",
+    "            tuple: A tuple containing the loss value and the predicted probabilities.\n",
+    "            The first element is a scalar (loss value), and the second element is an array of shape (batch_size, n_classes).\n",
+    "        '''\n",
+    "        assert y_true.shape == y_pred_logits.shape, f\"True labels shape {y_true.shape} does not match predicted logits shape {y_pred_logits.shape}\"\n",
     "        #apply softmax to the predictions\n",
     "        probs = softmax(y_pred_logits)\n",
     "        loss = -np.sum(y_true * np.log(probs + 1e-15)) / y_true.shape[0]\n",
     "        return loss, probs\n",
     "\n",
-    "    def backward(self, y_true: np.ndarray, y_pred: np.ndarray, probs: np.ndarray) -> np.ndarray:\n",
-    "        assert y_true.shape == y_pred.shape, f\"True labels shape {y_true.shape} does not match predicted labels shape {y_pred.shape}\"\n",
-    "        # Clip predictions to prevent division by zero\n",
+    "    def backward(self, y_true: np.ndarray, probs: np.ndarray) -> np.ndarray:\n",
+    "        '''\n",
+    "        Backward pass through the cross-entropy loss function.\n",
+    "        Args:\n",
+    "            y_true (np.ndarray): True labels (one-hot encoded). The shape should be (batch_size, n_classes).\n",
+    "            probs (np.ndarray): Predicted probabilities. The shape should be (batch_size, n_classes).\n",
+    "        Returns:\n",
+    "            np.ndarray: Gradient of the loss with respect to the predictions. The shape should be (batch_size, n_classes).\n",
+    "        '''\n",
+    "        \n",
+    "        assert y_true.shape == probs.shape, f\"True labels shape {y_true.shape} does not match prediction shape {probs.shape}\"\n",
     "        return (probs - y_true)/y_true.shape[0]"
    ]
   },
@@ -286,6 +356,14 @@
     "# Define concrete implementation of Optimizer: SGD\n",
     "\n",
     "class SGD(Optimizer):\n",
+    "    '''\n",
+    "    Stochastic Gradient Descent (SGD) optimizer.\n",
+    "    It updates the parameters using the gradients and a learning rate.\n",
+    "    The update rule is defined as:\n",
+    "    params = params - learning_rate * grads\n",
+    "    where params are the parameters to be updated, learning_rate is the learning rate, and grads are the gradients.\n",
+    "    '''\n",
+    "    \n",
     "    def __init__(self, learning_rate: float = 0.01):\n",
     "        assert learning_rate > 0, \"Learning rate must be a positive number.\"\n",
     "        self.learning_rate = learning_rate\n",
@@ -304,6 +382,27 @@
    "source": [
     "# Put everything together in a training loop\n",
     "def train(model: Sequential, loss_fn: Loss, optimizer: Optimizer, x_train: np.ndarray, y_train: np.ndarray, batch_size: int = 32, epochs: int = 1000):\n",
+    "    '''\n",
+    "    Train the model using the specified loss function and optimizer. No cross-validation is performed.\n",
+    "    The training loop consists of the following steps:\n",
+    "    1. Forward pass: Compute the predicted labels using the model.\n",
+    "    2. Compute the loss using the loss function.\n",
+    "    3. Backward pass: Compute the gradients of the loss with respect to the model parameters.\n",
+    "    4. Update the model parameters using the optimizer.\n",
+    "    5. Repeat steps 1-4 for the specified number of epochs.\n",
+    "    6. Print the loss every 100 epochs.\n",
+    "    7. Return the trained model.\n",
+    "    Args:\n",
+    "        model (Sequential): The model to be trained.\n",
+    "        loss_fn (Loss): The loss function to be used.\n",
+    "        optimizer (Optimizer): The optimizer to be used.\n",
+    "        x_train (np.ndarray): Training data. The shape should be (n_samples, n_features).\n",
+    "        y_train (np.ndarray): Training labels. The shape should be (n_samples, n_classes).\n",
+    "        batch_size (int): Batch size for training. Default is 32.\n",
+    "        epochs (int): Number of epochs for training. Default is 1000.\n",
+    "    Returns:\n",
+    "        None\n",
+    "    '''\n",
     "    for epoch in range(epochs):\n",
     "        epoch_loss = 0\n",
     "        # go in batches\n",
@@ -319,7 +418,7 @@
     "            epoch_loss += batch_loss\n",
     "            \n",
     "            # Backward pass\n",
-    "            grad = loss_fn.backward(y_batch, y_pred, probs)\n",
+    "            grad = loss_fn.backward(y_batch, probs)\n",
     "            model.backward(grad)\n",
     "            \n",
     "            # Update parameters\n",
@@ -331,8 +430,8 @@
     "        epoch_loss /= (x_train.shape[0] // batch_size)\n",
     "\n",
     "        # Print loss every 100 epochs\n",
-    "        #if epoch % 100 == 0:\n",
-    "        print(f\"Epoch {epoch}, Loss: {epoch_loss}\")\n",
+    "        if epoch % 100 == 0:\n",
+    "            print(f\"Epoch {epoch}, Loss: {epoch_loss}\")\n",
     "            \n"
    ]
   },
@@ -344,10 +443,6 @@
    "outputs": [],
    "source": [
     "#Define a simple model and apply it to spiral dataset\n",
-    "\n",
-    "x_train, y_train = generate_spiral_data(100, 3)\n",
-    "x_test, y_test = generate_spiral_data(20, 3)\n",
-    "\n",
     "model = Sequential([\n",
     "    Linear(2, 64),\n",
     "    ReLU(),\n",
@@ -355,8 +450,10 @@
     "])\n",
     "loss_fn = CrossEntropySoftMax()\n",
     "optimizer = SGD(learning_rate=0.01)\n",
-    "#batch_size = 32\n",
+    "\n",
     "# Train the model\n",
+    "x_train, y_train = generate_spiral_data(100, 3)\n",
+    "x_test, y_test = generate_spiral_data(20, 3)\n",
     "train(model, loss_fn, optimizer, x_train, y_train, epochs=1000, batch_size=10)\n",
     "# Test the model\n",
     "y_pred = model.forward(x_test)\n",
@@ -375,6 +472,10 @@
    "source": [
     "# Dataset and DataLoader classes to wrap the data and operate on batches\n",
     "class Dataset:\n",
+    "    '''\n",
+    "    Dataset class to hold the data and labels.\n",
+    "    It provides methods to access the data and labels by index.\n",
+    "    '''\n",
     "    def __init__(self, x: np.ndarray, y: np.ndarray):\n",
     "        self.x = x\n",
     "        self.y = y\n",
@@ -387,6 +488,10 @@
     "        return self.x[index], self.y[index]\n",
     "    \n",
     "class DataLoader:\n",
+    "    '''\n",
+    "    DataLoader class to load the data in batches.\n",
+    "    It provides methods to iterate over the data in batches.\n",
+    "    '''\n",
     "    def __init__(self, dataset: Dataset, indices = None, batch_size: int = 32, shuffle: bool = False):\n",
     "        self.dataset = dataset\n",
     "        self.batch_size = batch_size\n",
@@ -450,6 +555,26 @@
     "        self.optimizer = optimizer\n",
     "\n",
     "    def train(self, dataset: Dataset, epochs: int = 1000):\n",
+    "        '''\n",
+    "        Train the model using the specified loss function and optimizer.\n",
+    "        The training loop consists of the following steps:\n",
+    "        1. Split the dataset into training and validation sets.\n",
+    "        2. For each epoch:\n",
+    "            a. Iterate over the training set in batches.\n",
+    "            b. Forward pass: Compute the predicted labels using the model.\n",
+    "            c. Compute the loss using the loss function.\n",
+    "            d. Backward pass: Compute the gradients of the loss with respect to the model parameters.\n",
+    "            e. Update the model parameters using the optimizer.\n",
+    "            f. Print the loss every 100 epochs.\n",
+    "        3. Validate the model using the validation set.\n",
+    "        4. Return the trained model.\n",
+    "        Args:\n",
+    "            dataset (Dataset): The dataset to be used for training.\n",
+    "            epochs (int): Number of epochs for training. Default is 1000.\n",
+    "        Returns:\n",
+    "            None\n",
+    "        '''\n",
+    "        \n",
     "        # Split the dataset into training and validation sets\n",
     "        train_loader, val_loader = DataLoader.holdout_split(dataset,test_size=0.2)\n",
     "        # Training loop\n",
@@ -463,7 +588,7 @@
     "                loss, probs = self.loss_fn.forward(y_batch, y_pred)\n",
     "                epoch_loss += loss*x_batch.shape[0]\n",
     "                # Backward pass\n",
-    "                grad = self.loss_fn.backward(y_batch, y_pred, probs)\n",
+    "                grad = self.loss_fn.backward(y_batch, probs)\n",
     "                self.model.backward(grad)\n",
     "                \n",
     "                # Update parameters\n",
@@ -475,15 +600,28 @@
     "            epoch_loss /= len(train_loader.dataset)\n",
     "            # Validate the model\n",
     "            val_loss = self.validate(val_loader)\n",
-    "            print(f\"Epoch {epoch}, Loss: {epoch_loss:.4f}, Validation Loss: {val_loss:.4f}\")\n",
+    "            # Print loss every 100 epochs\n",
+    "            if epoch % 100 == 0:\n",
+    "                print(f\"Epoch {epoch}, Loss: {epoch_loss:.4f}, Validation Loss: {val_loss:.4f}\")\n",
     "            \n",
     "    def validate(self, val_loader: DataLoader) -> float:\n",
+    "        '''\n",
+    "        Validate the model using the validation set.\n",
+    "        The validation loop consists of the following steps:\n",
+    "        1. Iterate over the validation set in batches.\n",
+    "        2. Forward pass: Compute the predicted labels using the model.\n",
+    "        3. Compute the loss using the loss function.\n",
+    "        4. Return the average loss for the validation set.\n",
+    "        Args:\n",
+    "            val_loader (DataLoader): The DataLoader for the validation set.\n",
+    "        Returns:\n",
+    "            float: The average loss for the validation set.\n",
+    "        '''\n",
+    "        \n",
     "        val_loss = 0\n",
-    "        #count = 0\n",
     "        for x_val, y_val in val_loader:\n",
     "            y_val_pred = self.model.forward(x_val)\n",
     "            val_loss += self.loss_fn.forward(y_val, y_val_pred)[0]\n",
-    "           # count += 1\n",
     "        val_loss /= len(val_loader)\n",
     "        return val_loss"
    ]
@@ -496,6 +634,7 @@
    "outputs": [],
    "source": [
     "# CrossValidator class to perform k-fold cross-validation and other validation strategies\n",
+    "#To be implemented\n",
     "\n",
     "class CrossValidator:\n",
     "    def __init__(self, model: Sequential, loss_fn: Loss, optimizer: Optimizer, validation_strategy : str = \"holdout\"):\n",
@@ -503,8 +642,7 @@
     "        self.validation_strategy = validation_strategy\n",
     "        self.model = model\n",
     "        self.loss_fn = loss_fn\n",
-    "        self.optimizer = optimizer\n",
-    "        self.validation_strategy = validation_strategy\n",
+    "        self.optimizer \n",
     "\n",
     "    def cross_validate(self, dataset: Dataset, epochs: int = 1000):\n",
     "        pass"
