add random seed, type hints, add one more layer to the test model

--- a/notebooks/neural-network-from-scratch.ipynb
+++ b/notebooks/neural-network-from-scratch.ipynb
@@ -31,7 +31,10 @@
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "from abc import ABC, abstractmethod"
+    "from abc import ABC, abstractmethod\n",
+    "\n",
+    "# Set random seed for reproducibility\n",
+    "np.random.seed(42)"
    ]
   },
   {
@@ -96,7 +99,7 @@
     "    '''\n",
     "    Abstract base class for all layers in the neural network.\n",
     "    Each layer should implement the forward and backward methods, \n",
-    "    the instances store theoir input and output dimensions.\n",
+    "    the instances store their input and output dimensions.\n",
     "    '''\n",
     "    \n",
     "    def __init__(self, input_dim=None, output_dim=None):\n",
@@ -492,7 +495,7 @@
     "    DataLoader class to load the data in batches.\n",
     "    It provides methods to iterate over the data in batches.\n",
     "    '''\n",
-    "    def __init__(self, dataset: Dataset, indices = None, batch_size: int = 32, shuffle: bool = False):\n",
+    "    def __init__(self, dataset: Dataset, indices = None, batch_size: int = 32, shuffle: bool = False) -> None:\n",
     "        self.dataset = dataset\n",
     "        self.batch_size = batch_size\n",
     "        self.shuffle = shuffle\n",
@@ -663,11 +666,13 @@
     "model = Sequential([\n",
     "    Linear(2, 64),\n",
     "    ReLU(),\n",
-    "    Linear(64, 3),\n",
+    "    Linear(64, 128),\n",
+    "    ReLU(),\n",
+    "    Linear(128, 3),\n",
     "])\n",
-    "loss_function = CrossEntropySoftMax()\n",
+    "loss_fn = CrossEntropySoftMax()\n",
     "optimizer = SGD(learning_rate=0.01)\n",
-    "trainer = Trainer(model, loss_function, optimizer)\n",
+    "trainer = Trainer(model, loss_fn, optimizer)\n",
     "trainer.train(dataset, epochs=1000)\n",
     "# Test the model\n",
     "y_pred = model.forward(x_test)\n",
