--- a/notebooks/neural-network-from-scratch.ipynb
+++ b/notebooks/neural-network-from-scratch.ipynb
@@ -12,11 +12,13 @@
     "## Key Features\n",
     "\n",
     "- **Manual forward and backward passes** (no autograd)\n",
-    "- Training on toy datasets (e.g., digit recognition or synthetic classification)\n",
+    "\n",
+    "## Plans:\n",
+    "- Training on other toy datasets (e.g., digit recognition or synthetic classification)\n",
     "- Loss and accuracy plots updated in real-time\n",
     "- Visual explanation of gradients and weight updates\n",
-    "- Interactive sliders or inputs (if supported) to adjust hyperparameters\n",
-    "- Clean, well-commented code intended for learning and experimentation\n",
+    "- Interactive sliders or inputs to adjust hyperparameters\n",
+    "\n",
     "\n",
     "> *This project is inspired by university coursework, but developed independently from scratch to reinforce my understanding and extend the ideas further.*\n",
     "\n",
@@ -281,7 +283,26 @@
     "    def backward(self, grad: np.ndarray) -> np.ndarray:\n",
     "        for layer in reversed(self.layers):\n",
     "            grad = layer.backward(grad)\n",
-    "        return grad"
+    "        return grad\n",
+    "    \n",
+    "    def summary(self) -> None:\n",
+    "        \"\"\"Print a summary of the model architecture.\"\"\"\n",
+    "        print(\"Model Summary:\")\n",
+    "        print(\"-\" * 50)\n",
+    "        total_params = 0\n",
+    "        for i, layer in enumerate(self.layers):\n",
+    "            if isinstance(layer, Linear):\n",
+    "                params = np.prod(layer.weights.shape) + np.prod(layer.bias.shape)\n",
+    "                total_params += params\n",
+    "                print(f\"Layer {i}: {layer.__class__.__name__}, \"\n",
+    "                      f\"Input: {layer.input_dim}, Output: {layer.output_dim}, \"\n",
+    "                      f\"Parameters: {params}\")\n",
+    "            else:\n",
+    "                print(f\"Layer {i}: {layer.__class__.__name__}\")\n",
+    "        print(\"-\" * 50)\n",
+    "        print(f\"Total parameters: {total_params}\")\n",
+    "        print(\"-\" * 50)\n",
+    "        print(\"-\" * 50)"
    ]
   },
   {
@@ -670,6 +691,7 @@
     "    ReLU(),\n",
     "    Linear(128, 3),\n",
     "])\n",
+    "model.summary()\n",
     "loss_fn = CrossEntropySoftMax()\n",
     "optimizer = SGD(learning_rate=0.01)\n",
     "trainer = Trainer(model, loss_fn, optimizer)\n",
