add accuracy computation and printing

--- a/notebooks/neural-network-from-scratch.ipynb
+++ b/notebooks/neural-network-from-scratch.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 197,
    "id": "970a1e45",
    "metadata": {},
    "outputs": [],
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 198,
    "id": "a59c5524",
    "metadata": {},
    "outputs": [],
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 199,
    "id": "e89cde36",
    "metadata": {},
    "outputs": [],
@@ -191,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 200,
    "id": "7162cb0c",
    "metadata": {},
    "outputs": [],
@@ -307,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 201,
    "id": "fb14196b",
    "metadata": {},
    "outputs": [],
@@ -372,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 202,
    "id": "2cca352b",
    "metadata": {},
    "outputs": [],
@@ -399,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 203,
    "id": "ed26f1aa",
    "metadata": {},
    "outputs": [],
@@ -461,10 +461,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 204,
    "id": "ba90a693",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 0, Loss: 1.1014117619232333\n",
+      "Epoch 100, Loss: 0.9762981161942931\n",
+      "Epoch 200, Loss: 0.7405820564566803\n",
+      "Epoch 300, Loss: 0.7262407056266771\n",
+      "Epoch 400, Loss: 0.7175063425439885\n",
+      "Epoch 500, Loss: 0.7083521130724016\n",
+      "Epoch 600, Loss: 0.6970007937809385\n",
+      "Epoch 700, Loss: 0.680975590454861\n",
+      "Epoch 800, Loss: 0.658232182272772\n",
+      "Epoch 900, Loss: 0.626203585012758\n",
+      "Test Accuracy: 68.33%\n"
+     ]
+    }
+   ],
    "source": [
     "#Define a simple model and apply it to spiral dataset\n",
     "model = Sequential([\n",
@@ -489,7 +507,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 205,
    "id": "9758906f",
    "metadata": {},
    "outputs": [],
@@ -566,7 +584,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 206,
    "id": "804e0e1f",
    "metadata": {},
    "outputs": [],
@@ -626,8 +644,12 @@
     "            val_loss = self.validate(val_loader)\n",
     "            # Print loss every 100 epochs\n",
     "            if epoch % 100 == 0:\n",
-    "                print(f\"Epoch {epoch}, Loss: {epoch_loss:.4f}, Validation Loss: {val_loss:.4f}\")\n",
-    "            \n",
+    "                #print(f\"Epoch {epoch}, Loss: {epoch_loss:.4f}, Validation Loss: {val_loss:.4f}\")\n",
+    "                train_acc = self.compute_accuracy(train_loader)\n",
+    "                val_acc = self.compute_accuracy(val_loader)\n",
+    "                print(f\"Epoch {epoch}, Loss: {epoch_loss:.4f}, Val Loss: {val_loss:.4f}, \"\n",
+    "                f\"Train Acc: {train_acc:.2f}%, Val Acc: {val_acc:.2f}%\")\n",
+    "                \n",
     "    def validate(self, val_loader: DataLoader) -> float:\n",
     "        '''\n",
     "        Validate the model using the validation set.\n",
@@ -647,12 +669,29 @@
     "            y_val_pred = self.model.forward(x_val)\n",
     "            val_loss += self.loss_fn.forward(y_val, y_val_pred)[0]\n",
     "        val_loss /= len(val_loader)\n",
-    "        return val_loss"
+    "        return val_loss\n",
+    "    \n",
+    "    def compute_accuracy(self, loader: DataLoader) -> float:\n",
+    "        '''\n",
+    "        Compute the accuracy of the model on the given DataLoader.\n",
+    "        The accuracy is defined as the number of correct predictions divided by the total number of predictions.\n",
+    "        Args:\n",
+    "            loader (DataLoader): The DataLoader for the dataset.\n",
+    "        Returns:\n",
+    "            float: The accuracy of the model on the dataset.\n",
+    "        ''' \n",
+    "        correct = 0\n",
+    "        total = 0\n",
+    "        for x_batch, y_batch in loader:\n",
+    "            pred = self.model.forward(x_batch)\n",
+    "            correct += np.sum(np.argmax(pred, axis=1) == np.argmax(y_batch, axis=1))\n",
+    "            total += len(y_batch)\n",
+    "        return 100 * correct / total"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 207,
    "id": "44698a6e",
    "metadata": {},
    "outputs": [],
@@ -674,10 +713,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 208,
    "id": "50c2fc86",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model Summary:\n",
+      "--------------------------------------------------\n",
+      "Layer 0: Linear, Input: 2, Output: 64, Parameters: 192\n",
+      "Layer 1: ReLU\n",
+      "Layer 2: Linear, Input: 64, Output: 128, Parameters: 8320\n",
+      "Layer 3: ReLU\n",
+      "Layer 4: Linear, Input: 128, Output: 3, Parameters: 387\n",
+      "--------------------------------------------------\n",
+      "Total parameters: 8899\n",
+      "--------------------------------------------------\n",
+      "--------------------------------------------------\n",
+      "Epoch 0, Loss: 0.8790, Val Loss: 1.0987, Train Acc: 33.75%, Val Acc: 31.67%\n",
+      "Epoch 100, Loss: 0.8782, Val Loss: 1.0980, Train Acc: 33.75%, Val Acc: 31.67%\n",
+      "Epoch 200, Loss: 0.5467, Val Loss: 0.6560, Train Acc: 58.21%, Val Acc: 57.50%\n",
+      "Epoch 300, Loss: 0.2908, Val Loss: 0.3631, Train Acc: 84.00%, Val Acc: 82.83%\n",
+      "Epoch 400, Loss: 0.0766, Val Loss: 0.1050, Train Acc: 98.00%, Val Acc: 97.33%\n",
+      "Epoch 500, Loss: 0.0405, Val Loss: 0.0579, Train Acc: 98.83%, Val Acc: 98.33%\n",
+      "Epoch 600, Loss: 0.0282, Val Loss: 0.0415, Train Acc: 99.12%, Val Acc: 99.33%\n",
+      "Epoch 700, Loss: 0.0221, Val Loss: 0.0327, Train Acc: 99.33%, Val Acc: 99.33%\n",
+      "Epoch 800, Loss: 0.0184, Val Loss: 0.0272, Train Acc: 99.38%, Val Acc: 99.50%\n",
+      "Epoch 900, Loss: 0.0161, Val Loss: 0.0235, Train Acc: 99.50%, Val Acc: 99.50%\n",
+      "Test Accuracy: 99.50%\n"
+     ]
+    }
+   ],
    "source": [
     "#putting everything together\n",
     "x_train, y_train = generate_spiral_data(1000, 3)\n",
