added plans and priorities

--- a/notebooks/neural-network-from-scratch.ipynb
+++ b/notebooks/neural-network-from-scratch.ipynb
@@ -13,21 +13,45 @@
     "\n",
     "- **Manual forward and backward passes** (no autograd)\n",
     "\n",
-    "## Plans:\n",
-    "- Training on other toy datasets (e.g., digit recognition or synthetic classification)\n",
-    "- Loss and accuracy plots updated in real-time\n",
-    "- Visual explanation of gradients and weight updates\n",
-    "- Interactive sliders or inputs to adjust hyperparameters\n",
-    "\n",
-    "\n",
     "> *This project is inspired by university coursework, but developed independently from scratch to reinforce my understanding and extend the ideas further.*\n",
     "\n",
     "In case of any questions or comments, please contact me at ea.arseneva@gmail.com\n"
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "8b1afb4b",
+   "metadata": {},
+   "source": [
+    "## Plans:\n",
+    "### Data and Training\n",
+    "- Early stopping mechanism to prevent overfitting    (4)\n",
+    "- Implement k-fold cross-validation                  (6)\n",
+    "- Learning rate scheduling                           (5)\n",
+    "- Training on other toy datasets (e.g., digit recognition or synthetic classification)                                      (11)\n",
+    "\n",
+    "### Visualization and Interactivity\n",
+    "- Decision boundary visualization during training    (2)\n",
+    "- Loss and accuracy plots updated in real-time       (1)\n",
+    "- Visual explanation of gradients and weight updates (3)\n",
+    "- Interactive sliders for hyperparameters (learning rate, network architecture)                                        (12)\n",
+    "\n",
+    "### Model Improvements\n",
+    "- Batch normalization implementation                 (9)\n",
+    "- Dropout layers for regularization                  (10)\n",
+    "- Different weight initialization strategies         (8) \n",
+    "- Additional optimizers (Adam, RMSprop)              (7)\n",
+    "\n",
+    "### Future Improvements (OPTIONAL)\n",
+    "- Training history tracking and logging\n",
+    "- Model checkpointing and saving\n",
+    "- Comprehensive testing suite\n",
+    "- Performance optimization"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 197,
+   "execution_count": 1,
    "id": "970a1e45",
    "metadata": {},
    "outputs": [],
@@ -41,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 198,
+   "execution_count": 2,
    "id": "a59c5524",
    "metadata": {},
    "outputs": [],
@@ -90,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 199,
+   "execution_count": 3,
    "id": "e89cde36",
    "metadata": {},
    "outputs": [],
@@ -191,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 200,
+   "execution_count": 4,
    "id": "7162cb0c",
    "metadata": {},
    "outputs": [],
@@ -307,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 201,
+   "execution_count": 5,
    "id": "fb14196b",
    "metadata": {},
    "outputs": [],
@@ -372,7 +396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 202,
+   "execution_count": 6,
    "id": "2cca352b",
    "metadata": {},
    "outputs": [],
@@ -399,7 +423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 203,
+   "execution_count": 7,
    "id": "ed26f1aa",
    "metadata": {},
    "outputs": [],
@@ -461,7 +485,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 204,
+   "execution_count": 8,
    "id": "ba90a693",
    "metadata": {},
    "outputs": [
@@ -507,7 +531,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 205,
+   "execution_count": 9,
    "id": "9758906f",
    "metadata": {},
    "outputs": [],
@@ -584,7 +608,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 206,
+   "execution_count": 10,
    "id": "804e0e1f",
    "metadata": {},
    "outputs": [],
@@ -691,7 +715,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 207,
+   "execution_count": 11,
    "id": "44698a6e",
    "metadata": {},
    "outputs": [],
@@ -713,7 +737,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 208,
+   "execution_count": 12,
    "id": "50c2fc86",
    "metadata": {},
    "outputs": [
