add training visualizer class

--- a/notebooks/neural-network-from-scratch.ipynb
+++ b/notebooks/neural-network-from-scratch.ipynb
@@ -608,17 +608,69 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
+   "id": "ca70c15a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# class TrainingVisualizer that stores the training history and plots the loss and accuracy\n",
+    "\n",
+    "class TrainingVisualizer:\n",
+    "    '''\n",
+    "    TrainingVisualizer class to store the training history and plot the loss and accuracy.\n",
+    "    It provides methods to update the training history and plot the loss and accuracy.\n",
+    "    '''\n",
+    "    def __init__(self):\n",
+    "        self.history = {\n",
+    "            'loss': [],\n",
+    "            'val_loss': [],\n",
+    "            'train_acc': [],\n",
+    "            'val_acc': [],\n",
+    "            'epochs': []\n",
+    "        }\n",
+    "\n",
+    "    def update(self, loss: float, val_loss: float, train_acc: float, val_acc: float, epoch: int) -> None:\n",
+    "        self.history['loss'].append(loss)\n",
+    "        self.history['val_loss'].append(val_loss)\n",
+    "        self.history['train_acc'].append(train_acc)\n",
+    "        self.history['val_acc'].append(val_acc)\n",
+    "        self.history['epochs'].append(epoch)\n",
+    "\n",
+    "    def plot(self):\n",
+    "        import matplotlib.pyplot as plt\n",
+    "        plt.figure(figsize=(12, 5))\n",
+    "        plt.subplot(1, 2, 1)\n",
+    "        plt.plot(self.history['loss'], label='Train Loss')\n",
+    "        plt.plot(self.history['val_loss'], label='Validation Loss')\n",
+    "        plt.xlabel('Epochs')\n",
+    "        plt.ylabel('Loss')\n",
+    "        plt.legend()\n",
+    "        \n",
+    "        plt.subplot(1, 2, 2)\n",
+    "        plt.plot(self.history['train_acc'], label='Train Accuracy')\n",
+    "        plt.plot(self.history['val_acc'], label='Validation Accuracy')\n",
+    "        plt.xlabel('Epochs')\n",
+    "        plt.ylabel('Accuracy')\n",
+    "        plt.legend()\n",
+    "        \n",
+    "        plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "804e0e1f",
    "metadata": {},
    "outputs": [],
    "source": [
     "# class Trainer that governs the training process, using the DataLoader, ValidationStrategy, and Optimizer\n",
+    "\n",
     "class Trainer:\n",
     "    def __init__(self, model: Sequential, loss_fn: Loss, optimizer: Optimizer):\n",
     "        self.model = model\n",
     "        self.loss_fn = loss_fn\n",
     "        self.optimizer = optimizer\n",
+    "        self.visualizer = TrainingVisualizer()\n",
     "\n",
     "    def train(self, dataset: Dataset, epochs: int = 1000):\n",
     "        '''\n",
