added plotting - first version

--- a/notebooks/neural-network-from-scratch.ipynb
+++ b/notebooks/neural-network-from-scratch.ipynb
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "970a1e45",
    "metadata": {},
    "outputs": [],
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "a59c5524",
    "metadata": {},
    "outputs": [],
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "e89cde36",
    "metadata": {},
    "outputs": [],
@@ -215,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "7162cb0c",
    "metadata": {},
    "outputs": [],
@@ -331,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "fb14196b",
    "metadata": {},
    "outputs": [],
@@ -396,7 +396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "2cca352b",
    "metadata": {},
    "outputs": [],
@@ -423,7 +423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "ed26f1aa",
    "metadata": {},
    "outputs": [],
@@ -485,28 +485,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "ba90a693",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch 0, Loss: 1.1014117619232333\n",
-      "Epoch 100, Loss: 0.9762981161942931\n",
-      "Epoch 200, Loss: 0.7405820564566803\n",
-      "Epoch 300, Loss: 0.7262407056266771\n",
-      "Epoch 400, Loss: 0.7175063425439885\n",
-      "Epoch 500, Loss: 0.7083521130724016\n",
-      "Epoch 600, Loss: 0.6970007937809385\n",
-      "Epoch 700, Loss: 0.680975590454861\n",
-      "Epoch 800, Loss: 0.658232182272772\n",
-      "Epoch 900, Loss: 0.626203585012758\n",
-      "Test Accuracy: 68.33%\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#Define a simple model and apply it to spiral dataset\n",
     "model = Sequential([\n",
@@ -531,7 +513,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "9758906f",
    "metadata": {},
    "outputs": [],
@@ -718,6 +700,9 @@
     "            epoch_loss /= len(train_loader.dataset)\n",
     "            # Validate the model\n",
     "            val_loss = self.validate(val_loader)\n",
+    "            if epoch % 10 == 0:\n",
+    "                self.visualizer.update(epoch_loss, val_loss, self.compute_accuracy(train_loader), self.compute_accuracy(val_loader), epoch)\n",
+    "                self.visualizer.plot()\n",
     "            # Print loss every 100 epochs\n",
     "            if epoch % 100 == 0:\n",
     "                #print(f\"Epoch {epoch}, Loss: {epoch_loss:.4f}, Validation Loss: {val_loss:.4f}\")\n",
@@ -767,7 +752,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "44698a6e",
    "metadata": {},
    "outputs": [],
@@ -789,39 +774,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "50c2fc86",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Model Summary:\n",
-      "--------------------------------------------------\n",
-      "Layer 0: Linear, Input: 2, Output: 64, Parameters: 192\n",
-      "Layer 1: ReLU\n",
-      "Layer 2: Linear, Input: 64, Output: 128, Parameters: 8320\n",
-      "Layer 3: ReLU\n",
-      "Layer 4: Linear, Input: 128, Output: 3, Parameters: 387\n",
-      "--------------------------------------------------\n",
-      "Total parameters: 8899\n",
-      "--------------------------------------------------\n",
-      "--------------------------------------------------\n",
-      "Epoch 0, Loss: 0.8790, Val Loss: 1.0987, Train Acc: 33.75%, Val Acc: 31.67%\n",
-      "Epoch 100, Loss: 0.8782, Val Loss: 1.0980, Train Acc: 33.75%, Val Acc: 31.67%\n",
-      "Epoch 200, Loss: 0.5467, Val Loss: 0.6560, Train Acc: 58.21%, Val Acc: 57.50%\n",
-      "Epoch 300, Loss: 0.2908, Val Loss: 0.3631, Train Acc: 84.00%, Val Acc: 82.83%\n",
-      "Epoch 400, Loss: 0.0766, Val Loss: 0.1050, Train Acc: 98.00%, Val Acc: 97.33%\n",
-      "Epoch 500, Loss: 0.0405, Val Loss: 0.0579, Train Acc: 98.83%, Val Acc: 98.33%\n",
-      "Epoch 600, Loss: 0.0282, Val Loss: 0.0415, Train Acc: 99.12%, Val Acc: 99.33%\n",
-      "Epoch 700, Loss: 0.0221, Val Loss: 0.0327, Train Acc: 99.33%, Val Acc: 99.33%\n",
-      "Epoch 800, Loss: 0.0184, Val Loss: 0.0272, Train Acc: 99.38%, Val Acc: 99.50%\n",
-      "Epoch 900, Loss: 0.0161, Val Loss: 0.0235, Train Acc: 99.50%, Val Acc: 99.50%\n",
-      "Test Accuracy: 99.50%\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#putting everything together\n",
     "x_train, y_train = generate_spiral_data(1000, 3)\n",
