make it plot a static plot after the training is complete

--- a/notebooks/neural-network-from-scratch.ipynb
+++ b/notebooks/neural-network-from-scratch.ipynb
@@ -32,7 +32,7 @@
     "\n",
     "### Visualization and Interactivity\n",
     "- Decision boundary visualization during training    (2)\n",
-    "- Loss and accuracy plots updated in real-time       (1)\n",
+    "- (DONE) Loss and accuracy plots updated in real-time       (1)\n",
     "- Visual explanation of gradients and weight updates (3)\n",
     "- Interactive sliders for hyperparameters (learning rate, network architecture)                                        (12)\n",
     "\n",
@@ -58,6 +58,7 @@
    "source": [
     "import numpy as np\n",
     "from abc import ABC, abstractmethod\n",
+    "import matplotlib.pyplot as plt\n",
     "\n",
     "# Set random seed for reproducibility\n",
     "np.random.seed(42)"
@@ -595,6 +596,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "\n",
     "# class TrainingVisualizer that stores the training history and plots the loss and accuracy\n",
     "\n",
     "class TrainingVisualizer:\n",
@@ -607,35 +609,55 @@
     "            'loss': [],\n",
     "            'val_loss': [],\n",
     "            'train_acc': [],\n",
-    "            'val_acc': [],\n",
-    "            'epochs': []\n",
+    "            'val_acc': []\n",
     "        }\n",
-    "\n",
-    "    def update(self, loss: float, val_loss: float, train_acc: float, val_acc: float, epoch: int) -> None:\n",
+    "        \n",
+    "    def update(self, loss: float, val_loss: float, train_acc: float, val_acc: float):\n",
+    "        '''\n",
+    "        Update the training history with the current loss and accuracy.\n",
+    "        Args:   \n",
+    "            loss (float): Current loss.\n",
+    "            val_loss (float): Current validation loss.\n",
+    "            train_acc (float): Current training accuracy.\n",
+    "            val_acc (float): Current validation accuracy.\n",
+    "        Returns:\n",
+    "            None\n",
+    "        '''\n",
     "        self.history['loss'].append(loss)\n",
     "        self.history['val_loss'].append(val_loss)\n",
     "        self.history['train_acc'].append(train_acc)\n",
     "        self.history['val_acc'].append(val_acc)\n",
-    "        self.history['epochs'].append(epoch)\n",
     "\n",
     "    def plot(self):\n",
-    "        import matplotlib.pyplot as plt\n",
-    "        plt.figure(figsize=(12, 5))\n",
-    "        plt.subplot(1, 2, 1)\n",
-    "        plt.plot(self.history['loss'], label='Train Loss')\n",
-    "        plt.plot(self.history['val_loss'], label='Validation Loss')\n",
-    "        plt.xlabel('Epochs')\n",
-    "        plt.ylabel('Loss')\n",
-    "        plt.legend()\n",
+    "        '''\n",
+    "        Plot the training history.\n",
+    "        It plots the loss and accuracy for both training and validation sets.\n",
+    "        Returns:\n",
+    "            None\n",
+    "        '''\n",
+    "        assert len(self.history['loss']) > 0, \"No training history to plot.\"\n",
+    "        fig, (ax1, ax2) = plt.subplots(1, 2, figsize=(12, 5))\n",
     "        \n",
-    "        plt.subplot(1, 2, 2)\n",
-    "        plt.plot(self.history['train_acc'], label='Train Accuracy')\n",
-    "        plt.plot(self.history['val_acc'], label='Validation Accuracy')\n",
-    "        plt.xlabel('Epochs')\n",
-    "        plt.ylabel('Accuracy')\n",
-    "        plt.legend()\n",
+    "        epochs = range(len(self.history['loss']))\n",
+    "        # Plot loss\n",
+    "        ax1.plot(epochs, self.history['loss'], 'b-', label='Train Loss')\n",
+    "        ax1.plot(epochs, self.history['val_loss'], 'r-', label='Val Loss')\n",
+    "        ax1.set_title('Loss')\n",
+    "        ax1.set_xlabel('Epochs')\n",
+    "        ax1.set_ylabel('Loss')\n",
+    "        ax1.legend()\n",
     "        \n",
-    "        plt.show()"
+    "        # Plot accuracy\n",
+    "        ax2.plot(epochs, self.history['train_acc'], 'b-', label='Train Accuracy')\n",
+    "        ax2.plot(epochs, self.history['val_acc'], 'r-', label='Val Accuracy')\n",
+    "        ax2.set_title('Accuracy')\n",
+    "        ax2.set_xlabel('Epochs')\n",
+    "        ax2.set_ylabel('Accuracy (%)')\n",
+    "        ax2.legend()\n",
+    "        \n",
+    "        plt.tight_layout()\n",
+    "        plt.show()     \n",
+    "    \n"
    ]
   },
   {
@@ -700,9 +722,7 @@
     "            epoch_loss /= len(train_loader.dataset)\n",
     "            # Validate the model\n",
     "            val_loss = self.validate(val_loader)\n",
-    "            if epoch % 10 == 0:\n",
-    "                self.visualizer.update(epoch_loss, val_loss, self.compute_accuracy(train_loader), self.compute_accuracy(val_loader), epoch)\n",
-    "                self.visualizer.plot()\n",
+    "            self.visualizer.update(epoch_loss, val_loss, self.compute_accuracy(train_loader), self.compute_accuracy(val_loader))\n",
     "            # Print loss every 100 epochs\n",
     "            if epoch % 100 == 0:\n",
     "                #print(f\"Epoch {epoch}, Loss: {epoch_loss:.4f}, Validation Loss: {val_loss:.4f}\")\n",
@@ -710,6 +730,9 @@
     "                val_acc = self.compute_accuracy(val_loader)\n",
     "                print(f\"Epoch {epoch}, Loss: {epoch_loss:.4f}, Val Loss: {val_loss:.4f}, \"\n",
     "                f\"Train Acc: {train_acc:.2f}%, Val Acc: {val_acc:.2f}%\")\n",
+    "        \n",
+    "        # Plot the training history\n",
+    "        self.visualizer.plot()\n",
     "                \n",
     "    def validate(self, val_loader: DataLoader) -> float:\n",
     "        '''\n",
